--- a/style.css
+++ b/style.css
@@ -19,21 +19,29 @@ h1{
                  0 0 90px #ff94fa,
                  0 0 120px #ff94fa,
                  0 0 160px #ff94fa;
-    margin-top: 1%;
+    margin-top: 3%;
 }
 .text{
     font-family: 'Abel', sans-serif;
     text-align: center;
-    color: #000;
+    color: #ffffff;
     font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 1%;
+    text-shadow: 0 0 5px white,
+                 0 0 10px white,
+                 0 0 20px deeppink,
+                 0 0 40px deeppink,
+                 0 0 60px deeppink,
+                 0 0 90px deeppink,
+                 0 0 120px deeppink,
+                 0 0 160px deeppink;
 }
 .text0{
     font-family: 'Abel', sans-serif;
     letter-spacing: 0.3em;
     text-align: center;
-    color: #000;
+    color:#ffffff;
     font-size: 2em;
     font-weight: 900;
     margin-bottom: 3%;
@@ -45,6 +53,7 @@ h1{
     flex-direction: column;
     align-items: center;
     font-size: 2em;
+    color:#ffffff;
 }
 input{
     height: 2em;
@@ -54,7 +63,7 @@ label{
 }
 .explanation{
     font-size: 0.9em;
-    color: #000;
+    color: #ffffff;
     text-align: center;
 }
 #submit{
@@ -71,7 +80,7 @@ body::after {
     background: url(img/AppLogo.png);
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.5;
+    opacity: 0.3;
     top: 0;
     left: 0;
     bottom: 0;
@@ -80,7 +89,8 @@ body::after {
     z-index: -1;   
   }
   button{
-      height: 20px;
+      height: 25px;
+      width: auto;
   }
   #Alien{
         position: fixed;
@@ -95,4 +105,12 @@ body::after {
       opacity: 0.8;
       text-align: center;
          
+  }
+  .copy{
+    font-size: 0.9em;
+    color: #ffffff;
+    float: right;
+    margin-top: 3%;
+    margin-bottom: 2%;
+
   }
