--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body{
     background-color: #000;
-    z-index: -2;
+    z-index: -1;
 }
 h1{
     font-family: 'Comforter Brush', cursive;
@@ -24,13 +24,13 @@ h1{
 .text{
     font-family: 'Abel', sans-serif;
     text-align: center;
-    color: #ffffff;
+    color: #000000;
     font-size: 1.5em;
     font-weight: 700;
     margin-bottom: 1%;
     text-shadow: 0 0 5px white,
                  0 0 10px white,
-                 0 0 20px deeppink,
+                 0 0 20px rgb(255, 255, 255),
                  0 0 40px deeppink,
                  0 0 60px deeppink,
                  0 0 90px deeppink,
@@ -47,13 +47,31 @@ h1{
     margin-bottom: 3%;
     margin-top: 5%;
 }
+
 #AccountNameFilds{
     font-family: 'Abel', sans-serif;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-content: space-between;
     font-size: 2em;
     color:#ffffff;
+}
+
+.flexbox {
+    min-width: 30%;
+    margin: 2%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+}
+.flexbox1{
+    margin-top: 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 input{
     height: 2em;
@@ -62,16 +80,17 @@ label{
  margin: 1%;
 }
 .explanation{
-    font-size: 0.9em;
+    font-size: 1em;
     color: #ffffff;
     text-align: center;
+    margin-top:2%;
 }
 #submit{
     margin: 2% 2%;
 }
 
 body {
-    width: auto;
+    width: 100%;
     height: auto;
   }
   
@@ -80,7 +99,7 @@ body::after {
     background: url(img/AppLogo.png);
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.3;
+    opacity: 0.4;
     top: 0;
     left: 0;
     bottom: 0;
@@ -89,10 +108,15 @@ body::after {
     z-index: -1;   
   }
   button{
-      height: 25px;
-      width: auto;
+      height: 40px;
+      width: 80px;
+      font-size: 1.5rem;
+      font-family: 'Abel', sans-serif;
+      color:rgb(255, 255, 255);
+      background-color: rgb(122, 122, 122);
+      margin-bottom: 2%;
   }
-  #Alien{
+  /*#Alien{
         position: fixed;
         margin-top: 40%;
         margin-left: 80%;       
@@ -102,15 +126,14 @@ body::after {
       height: 80px;
       z-index: -1;
       border-radius: 360px;
-      opacity: 0.8;
+      opacity: 0.5;
       text-align: center;
          
-  }
+  }*/
+ 
   .copy{
-    font-size: 0.9em;
+    font-size: 0.6em;
     color: #ffffff;
-    float: right;
     margin-top: 3%;
-    margin-bottom: 2%;
-
+    text-align: center;
   }
