--- a/style.css
+++ b/style.css
@@ -51,17 +51,18 @@ h1{
     display:flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    align-items: center;
+    
 }
 
 #AccountNameFields{
     font-family: 'Abel', sans-serif;
-    display: flex;
-    /*justify-content: space-around;
+    display: block;
+    justify-content: space-around;
     flex-wrap: wrap;
-    align-content: space-between;*/
+    align-content: space-between;
     font-size: 2em;
     color:#ffffff;
+   
 }
 
 .flexbox {
@@ -70,7 +71,7 @@ h1{
     height: auto;
     display: flex;
     align-items: center;
-    flex-direction: column;
+    
       
 }
 .flexbox1{
@@ -78,7 +79,7 @@ h1{
     margin-top: 2%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    
 }
 input{
     height: 2em;
