--- a/style.css
+++ b/style.css
@@ -118,20 +118,20 @@ body::after {
       background-color: rgb(122, 122, 122);
       margin-bottom: 2%;
   }
-  /*#Alien{
+  #Alien{
         position: fixed;
         margin-top: 40%;
         margin-left: 80%;       
       
   }
   .Alien{
-      height: 80px;
+      height: 120px;
       z-index: -1;
       border-radius: 360px;
       opacity: 0.5;
       text-align: center;
          
-  }*/
+  }
  
   .copy{
     font-size: 0.6em;
